[package]
name = "sc-basic-authorship"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Basic implementation of block-authoring logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex = "0.3.1"
num_cpus = "1.8.0"
codec = { package = "parity-scale-codec", version = "3.2.2" }
futures = "0.3.21"
futures-timer = "3.0.1"
log = "0.4.17"
async-trait = "0.1.56"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", path = "../../utils/prometheus" }
sc-block-builder = { version = "0.10.0-dev", path = "../block-builder" }
sc-client-api = { version = "4.0.0-dev", path = "../api" }
sc-proposer-metrics = { version = "0.10.0-dev", path = "../proposer-metrics" }
sc-telemetry = { version = "4.0.0-dev", path = "../telemetry" }
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../../client/transaction-pool/api" }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api" }
sp-spot-api = { version = "4.0.0-dev", path = "../../primitives/spot-api" }
sp-perp-api = { version = "4.0.0-dev", path = "../../primitives/perp-api" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" }
sp-consensus = { version = "0.10.0-dev", path = "../../primitives/consensus/common" }
sp-core = { version = "7.0.0", path = "../../primitives/core" }
sp-io = { version = "7.0.0", path = "../../primitives/io" }
sp-inherents = { version = "4.0.0-dev", path = "../../primitives/inherents" }
sp-runtime = { version = "7.0.0", path = "../../primitives/runtime" }
sp-state-machine = { version = "0.13.0", path = "../../primitives/state-machine" }
sp-version = { version = "5.0.0", path = "../../primitives/version" }
frame-support = { path = "../../frame/support" }

[dev-dependencies]
env_logger = "0.11.8"
parking_lot = "0.12.1"
sc-transaction-pool = { version = "4.0.0-dev", path = "../transaction-pool" }
sp-std = { version = "5.0.0", default-features = false, path = "../../primitives/std" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }

[features]
dev-time = ["sp-state-machine/dev-time"]
kvdb = ["sp-state-machine/kvdb"]
typed-cache = ["sp-state-machine/typed-cache", "kvdb"]
async-root = ["sp-state-machine/async-root"]
