[package]
name = "hotstuff-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1.57", optional = true }
codec = { package = "parity-scale-codec", version = "3.2.2", features = ["derive"], default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
sp-api = { default-features = false, path = "../../primitives/api" }
sp-application-crypto = { default-features = false, path = "../../primitives/application-crypto" }
sp-consensus-slots = { default-features = false, path = "../../primitives/consensus/slots" }
sp-inherents = { default-features = false, path = "../../primitives/inherents" }
sp-runtime = { default-features = false, path = "../../primitives/runtime" }
sp-std = { default-features = false, path = "../../primitives/std" }
sp-timestamp = { default-features = false, path = "../../primitives/timestamp" }
sp-core = { default-features = false, path = "../../primitives/core" }
serde = { version = "1.0.219", default-features = false, features = ["derive", "alloc"] }

[features]
default = ["std"]
std = [
	"async-trait",
	"codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-consensus-slots/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-timestamp/std",
	"sp-core/std",
]

bls-experimental = [
	"sp-core/bls-experimental",
	"sp-application-crypto/bls-experimental"
]
