[package]
name = "kv-db"
version = "0.1.0"
edition = "2021"

[dependencies.hash-db]
version = "0.16.0"
default-features = false

[dependencies.hashbrown]
version = "0.13.2"
features = ["ahash"]
default-features = false

[dependencies.log]
version = "0.4"

[dependencies.rustc-hex]
version = "2.1.0"
optional = true
default-features = false

[dependencies.smallvec]
version = "1.0.0"
features = [
    "union",
    "const_new",
]

[dependencies.memory-db]
version = "0.32.0"
default-features = false

[dev-dependencies]
env_logger = "0.11.8"
sp-core = { path = "../core", default-features = false }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "hash-db/std",
    "rustc-hex",
    "memory-db/std",
]
async-root = []
dev-time = []
