[package]
name = "kv-db"
version = "0.1.0"
edition = "2021"

[dependencies.hash-db]
version = "0.16.0"
default-features = false

[dependencies.log]
version = "0.4"

[dependencies.rustc-hex]
version = "2.1.0"
optional = true
default-features = false

[dependencies.memory-db]
version = "0.32.0"
default-features = false

[dependencies.typed-cache]
path = "../typed-cache"
default-features = false

[dev-dependencies]
env_logger = "0.11.8"
sp-core = { path = "../core", default-features = false }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "hash-db/std",
    "rustc-hex",
    "memory-db/std",
    "typed-cache/std",
]
async-root = []
dev-time = []
