[package]
name = "sp-spot-api"
version = "4.0.0-dev"
edition = "2021"
license = "Apache-2.0"
description = "The block builder runtime api."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { version = "4.0.0-dev", default-features = false, path = "../api" }
sp-runtime = { version = "7.0.0", default-features = false, path = "../runtime" }
sp-std = { version = "5.0.0", default-features = false, path = "../std" }

[features]
default = [ "std" ]
std = [
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
]
