[package]
name = "storage_cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive", "max-encoded-len"] }
smallvec = "1.8.0"
log = { version = "0.4.17", default-features = false }
sp-std = { version = "5.0.0", default-features = false, path = "../std" }
downcast-rs = "2.0.2"

[features]
default = ["std"]
std = [
    "codec/std",
    "log/std",
    "sp-std/std",
]
