[package]
name = "typed-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive", "max-encoded-len"] }
smallvec = "1.8.0"
log = { version = "0.4.17", default-features = false }
sp-std = { version = "5.0.0", default-features = false, path = "../std" }
downcast-rs = { version = "2.0.2", default-features = false }
once_cell = { version = "1.21.3", default-features = false, features = ["critical-section"] }

[dev-dependencies]
env_logger = "0.11.8"

[features]
default = ["std"]
std = [
    "lazy_static",
    "downcast-rs/std",
    "downcast-rs/sync",
    "codec/std",
    "log/std",
    "once_cell/std",
    "sp-std/std",
]
dev-time = []
