[package]
name = "extend-account"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../support" }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
sp-core = { version = "7.0.0", default-features = false, path = "../../../primitives/core" }
sp-std = { version = "5.0.0", default-features = false, path = "../../../primitives/std" }

[dev-dependencies]
sp-timestamp = { default-features = false, path = "../../../primitives/timestamp" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "scale-info/std",
    "sp-core/std",
    "sp-std/std",
    "sp-timestamp/std",
]
